Closed Bug 450419 Opened 18 years ago Closed 18 years ago

OmniWeb's "Passwords not saved" placeholder isn't ignored as an account

Categories

(Camino Graveyard :: OS Integration, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: gregreedee, Assigned: stuart.morgan+bugzilla)

References

()

Details

(Keywords: fixed1.8.1.17)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en; rv:1.8.1.16) Gecko/20080803 Camino/1.6.3 (like Firefox/2.0.0.16) Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en; rv:1.8.1.16) Gecko/20080803 Camino/1.6.3 (like Firefox/2.0.0.16) Saved form details (Keychain) are sometimes "remembered" for Gmail, sometimes not. A. When failing, "Username" form shows "Passwords not saved". When this dialogue is deleted, and the first letter of my username is typed, my username and password both instantly appear in each correct dialogue box. B. Otherwise, Username and Password both appear as expected. About 50/50 whether A. or B. happens Reproducible: Sometimes Steps to Reproduce: 1.Click on G mail bookmark icon in bookmark toolbar 2.Google Mail front page appears with login forms 3. Actual Results: "Passowords not saved" in Username form box. Password form box empty. Delete the "Passwords not saved" dialogue, type in first letter of Username in the Username form box, correct Username appears in Username box, correct Password in Password box. Expected Results: Correct Username and Password should appear in the right dialogue box within a couple of seconds. Correct behavior about 40 - 50 percent of the time ...
Hrm, that sounds like we are picking up the password-block marker from Safari, which we are supposed to screen out. I assume you've told Safari not to remember passwords on mail.google.com? If you open Keychain Access (in /Applications/Utilities) and search for "saved", there will be an entry called something like "mail.google.com (Passwords not saved)". If you open that entry, and click "Show password", what is there (if it's a real password you use, just say that; no need to share actual password data)? We screen those entries out by looking for a password of " ", which is all I've ever seen Safari use, but it sounds like there may be another marker we need to look for. What is your Mac OS X version, by the way?
Component: HTML Form Controls → OS Integration
QA Contact: form.controls → os.integration
Summary: Intermittent failure of saved username password → "Passwords not saved" placeholder sometimes being used to fill passwords
It turns out Safari doesn't localize that string (go Safari!), so if nothing else I'll blacklist that account name.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Assignee: nobody → stuart.morgan
Status: ASSIGNED → NEW
Hardware: Macintosh → All
Greg, in the future please post replies in bugzilla, rather than replying by private mail. The problem is that OmniWeb uses "" as the password for those entries, rather than " " as Safari does (and they also don't set the keychain item flag that is there explicitly to identify this kind of item; sigh).
Summary: "Passwords not saved" placeholder sometimes being used to fill passwords → OmniWeb's "Passwords not saved" placeholder isn't ignored as an account
Attached patch fixSplinter Review
Since it's not necessarily obvious: the reason I'm removing the first check rather than replacing it with the new isNonEntry is that it was a lookup from Keychain by username; there's no way we'll get one of these non-entries that way. (And for the curious, A0 is non-breaking space. I guess they wanted to make extra sure not to collide with a real username?)
Attachment #333699 - Flags: superreview?(mikepinkerton)
Flags: camino1.6.4?
Target Milestone: --- → Camino2.0
Comment on attachment 333699 [details] [diff] [review] fix sr=pink maybe describe the "" v. " " (Omniweb v. Safari) difference in a comment so we don't forget about it and assume we can simplify to one or the other down the road?
Attachment #333699 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH, with expanded comment about why we do it the new way.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: camino1.6.4? → camino1.6.4+
Keywords: fixed1.8.1.17
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: