Camino only - Bug 450419 - Don't treat OmniWeb's 'Passwords not saved' marker as an account. r/sr=pink